--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,9 @@ webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 widgetsnbextension==4.0.13
-tensorflow==2.15.0
+tensorflow==2.20.0rc0
+
+
 
 
 
