--- a/requirements.txt
+++ b/requirements.txt
@@ -125,7 +125,8 @@ webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 widgetsnbextension==4.0.13
-firebase-admin
+firebase-admin==7.1.0
+
 
 
 
