--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,23 @@
   "short_name": "CropX",
   "description": "Smart Crop Recommendation System - Lite App",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4ade80",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "static/images/icon-192.png",
+      "src": "/static/images/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "static/images/icon-512.png",
+      "src": "/static/images/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
-
